/*  main  */
syntax = "proto3";
package tech.ganyaozi.dicegirl.proto;
option java_package = "tech.ganyaozi.dicegirl.proto";
option java_outer_classname = "BaseMessage";


message baseMessage {
    int32   cmd = 1;
    fixed64 seq = 2;
    string  srcID = 3;
    string  dstID = 4;
    bool    ack = 5;
    bytes   content = 6;
}

enum Commands {
    IM_CREATE_ROOM_REQ      = 0;
    IM_CREATE_ROOM_RES      = 1;
    IM_ENTER_ROOM_REQ       = 2;
    IM_ENTER_ROOM_RES       = 3;
    IM_EXIT_ROOM_REQ        = 4;
    IM_EXIT_ROOM_RES        = 5;
    IM_UPDATE_ROOM_INFO_REQ = 6;
    IM_UPDATE_ROOM_INFO_RES = 7;
    IM_MODIFY_ROOM_INFO_REQ = 8;
    IM_MODIFY_ROOM_INFO_RES = 9;
}


